--- a/signup.html
+++ b/signup.html
@@ -22,8 +22,18 @@
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit">Sign Up</button>
+                <!-- Nuevos campos para el registro -->
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="birthdate">Birthdate:</label>
+                    <input type="date" id="birthdate" name="birthdate" required>
+                </div>
+                <button type="submit">Register</button>
             </form>
+            <p>Already have an account? <a href="signin.html">Sign In</a></p> <!-- Enlace para iniciar sesión -->
         </section>
     </main>
     <footer>
@@ -32,3 +42,4 @@
     <script src="signup.js"></script>
 </body>
 </html>
+
